Fix e2e